added function and gate using transistors

--- a/transistors/impl1/hdla_gen_hierarchy.html
+++ b/transistors/impl1/hdla_gen_hierarchy.html
@@ -2,8 +2,10 @@
 Starting: parse design source files
 (VERI-1482) Analyzing Verilog file 'C:/lscc/diamond/3.14/ispfpga/userware/NT/SYNTHESIS_HEADERS/ecp5u.v'
 (VERI-1482) Analyzing Verilog file 'D:/RTL_FPGA/transistors/primitives_ex.v'
-INFO - D:/RTL_FPGA/transistors/primitives_ex.v(19,8-19,18) (VERI-1018) compiling module 'not_switch'
-INFO - D:/RTL_FPGA/transistors/primitives_ex.v(19,1-27,10) (VERI-9000) elaborating module 'not_switch'
+(VERI-1482) Analyzing Verilog file 'D:/RTL_FPGA/transistors/and_gate_transistor.v'
+INFO - D:/RTL_FPGA/transistors/and_gate_transistor.v(1,8-1,27) (VERI-1018) compiling module 'and_gate_primitives'
+INFO - D:/RTL_FPGA/transistors/and_gate_transistor.v(1,1-16,10) (VERI-9000) elaborating module 'and_gate_primitives'
+INFO - D:/RTL_FPGA/transistors/primitives_ex.v(19,1-27,10) (VERI-9000) elaborating module 'not_switch_uniq_1'
 Done: design load finished with (0) errors, and (0) warnings
 
 </PRE></BODY></HTML>
