added new RTL design for a MUX

--- a/VHDL/ALU/impl1/hdla_gen_hierarchy.html
+++ b/VHDL/ALU/impl1/hdla_gen_hierarchy.html
@@ -44,18 +44,10 @@ INFO - C:/lscc/diamond/3.14/ispfpga/vhdl_packages/syn_unsi.vhd(94,14-94,32) (VHD
 INFO - C:/lscc/diamond/3.14/ispfpga/vhdl_packages/synattr.vhd(50,9-50,19) (VHDL-1014) analyzing package 'attributes'
 (VERI-1482) Analyzing Verilog file 'C:/lscc/diamond/3.14/ispfpga/userware/NT/SYNTHESIS_HEADERS/ecp5u.v'
 (VHDL-1481) Analyzing VHDL file 'C:/lscc/diamond/3.14/ispfpga/userware/NT/SYNTHESIS_HEADERS/ecp5u.vhd'
-(VHDL-1481) Analyzing VHDL file 'D:/RTL_FPGA/VHDL/ALU/operation.vhd'
-INFO - D:/RTL_FPGA/VHDL/ALU/operation.vhd(4,8-4,17) (VHDL-1012) analyzing entity 'operation'
-INFO - D:/RTL_FPGA/VHDL/ALU/operation.vhd(13,14-13,23) (VHDL-1010) analyzing architecture 'behaviour'
-(VHDL-1481) Analyzing VHDL file 'D:/RTL_FPGA/VHDL/ALU/logic.vhd'
-INFO - D:/RTL_FPGA/VHDL/ALU/logic.vhd(3,8-3,13) (VHDL-1012) analyzing entity 'logic'
-INFO - D:/RTL_FPGA/VHDL/ALU/logic.vhd(12,14-12,23) (VHDL-1010) analyzing architecture 'behaviour'
-(VHDL-1481) Analyzing VHDL file 'D:/RTL_FPGA/VHDL/ALU/ALU.vhd'
-INFO - D:/RTL_FPGA/VHDL/ALU/ALU.vhd(5,8-5,11) (VHDL-1012) analyzing entity 'alu'
-INFO - D:/RTL_FPGA/VHDL/ALU/ALU.vhd(15,14-15,23) (VHDL-1010) analyzing architecture 'behaviour'
-INFO - D:/RTL_FPGA/VHDL/ALU/ALU.vhd(5,8-5,11) (VHDL-1067) elaborating 'ALU(behaviour)'
-INFO - D:/RTL_FPGA/VHDL/ALU/operation.vhd(4,8-4,17) (VHDL-1067) elaborating 'operation_uniq_0(behaviour)'
-INFO - D:/RTL_FPGA/VHDL/ALU/logic.vhd(3,8-3,13) (VHDL-1067) elaborating 'logic_uniq_0(behaviour)'
+(VHDL-1481) Analyzing VHDL file 'D:/RTL_FPGA/VHDL/MUX/mux_sel.vhd'
+INFO - D:/RTL_FPGA/VHDL/MUX/mux_sel.vhd(5,8-5,15) (VHDL-1012) analyzing entity 'mux_sel'
+INFO - D:/RTL_FPGA/VHDL/MUX/mux_sel.vhd(13,14-13,23) (VHDL-1010) analyzing architecture 'behaviour'
+INFO - D:/RTL_FPGA/VHDL/MUX/mux_sel.vhd(5,8-5,15) (VHDL-1067) elaborating 'mux_sel(behaviour)'
 Done: design load finished with (0) errors, and (0) warnings
 
 </PRE></BODY></HTML>
