--- a/VHDL/lar_amt/impl1/hdla_gen_hierarchy.html
+++ b/VHDL/lar_amt/impl1/hdla_gen_hierarchy.html
@@ -1,6 +1,72 @@
 <HTML>         	<HEAD><TITLE></TITLE>                                   	<STYLE TYPE="text/css">                               	<!--                                                    	body,pre{                                              	font-family:'Courier New', monospace;             	color: #000000;                                     	font-size:88%;                                      	background-color: #ffffff;                          	}                                                       	h1 {                                                    	font-weight: bold;                                  	margin-top: 24px;                                   	margin-bottom: 10px;                                	border-bottom: 3px solid #000;    font-size: 1em;   	}                                                       	h2 {                                                    	font-weight: bold;                                  	margin-top: 18px;                                   	margin-bottom: 5px;                                 	font-size: 0.90em;                                  	}                                                       	h3 {                                                    	font-weight: bold;                                  	margin-top: 12px;                                   	margin-bottom: 5px;                                 	font-size: 0.80em;                                       	}                                                       	p {                                                     	font-size:78%;                                      	}                                                       	P.Table {                                               	margin-top: 4px;                                    	margin-bottom: 4px;                                 	margin-right: 4px;                                  	margin-left: 4px;                                   	}                                                       	table                                                   	{                                                       	border-width: 1px 1px 1px 1px;                      	border-style: solid solid solid solid;              	border-color: black black black black;              	border-collapse: collapse;                          	}                                                       	th {                                                    	font-weight:bold;                                   	padding: 4px;                                       	border-width: 1px 1px 1px 1px;                      	border-style: solid solid solid solid;              	border-color: black black black black;              	vertical-align:top;                                 	text-align:left;                                    	font-size:78%;                                           	}                                                       	td {                                                    	padding: 4px;                                       	border-width: 1px 1px 1px 1px;                      	border-style: solid solid solid solid;              	border-color: black black black black;              	vertical-align:top;                                 	font-size:78%;                                      	}                                                       	a {                                                     	color:#013C9A;                                      	text-decoration:none;                               	}                                                       		a:visited {                                             	color:#013C9A;                                      	}                                                       		a:hover, a:active {                                     	text-decoration:underline;                          	color:#5BAFD4;                                      	}                                                       	.pass                                                   	{                                                       	background-color: #00ff00;                              	}                                                                	.fail                                                   	{                                                       	background-color: #ff0000;                              	}                                                       	.comment                                                	{                                                       	font-size: 90%;                                     	font-style: italic;                                 	}                                                       		-->                                                     	</STYLE>                                                	</HEAD>                                                 	<BODY>                                                  	<PRE>Setting log file to 'D:/RTL_FPGA/VHDL/lar_amt/impl1/hdla_gen_hierarchy.html'.
 Starting: parse design source files
+(VHDL-1481) Analyzing VHDL file 'C:/lscc/diamond/3.14/ispfpga/vhdl_packages/standard.vhd'
+INFO - C:/lscc/diamond/3.14/ispfpga/vhdl_packages/standard.vhd(9,9-9,17) (VHDL-1014) analyzing package 'standard'
+(VHDL-1481) Analyzing VHDL file 'C:/lscc/diamond/3.14/ispfpga/vhdl_packages/std_1164.vhd'
+INFO - C:/lscc/diamond/3.14/ispfpga/vhdl_packages/std_1164.vhd(15,9-15,23) (VHDL-1014) analyzing package 'std_logic_1164'
+INFO - C:/lscc/diamond/3.14/ispfpga/vhdl_packages/std_1164.vhd(178,14-178,28) (VHDL-1013) analyzing package body 'std_logic_1164'
+(VHDL-1481) Analyzing VHDL file 'C:/lscc/diamond/3.14/ispfpga/vhdl_packages/mgc_qsim.vhd'
+INFO - C:/lscc/diamond/3.14/ispfpga/vhdl_packages/mgc_qsim.vhd(18,9-18,19) (VHDL-1014) analyzing package 'qsim_logic'
+INFO - C:/lscc/diamond/3.14/ispfpga/vhdl_packages/mgc_qsim.vhd(753,14-753,24) (VHDL-1013) analyzing package body 'qsim_logic'
+(VHDL-1481) Analyzing VHDL file 'C:/lscc/diamond/3.14/ispfpga/vhdl_packages/numeric_bit.vhd'
+INFO - C:/lscc/diamond/3.14/ispfpga/vhdl_packages/numeric_bit.vhd(54,9-54,20) (VHDL-1014) analyzing package 'numeric_bit'
+INFO - C:/lscc/diamond/3.14/ispfpga/vhdl_packages/numeric_bit.vhd(834,14-834,25) (VHDL-1013) analyzing package body 'numeric_bit'
+(VHDL-1481) Analyzing VHDL file 'C:/lscc/diamond/3.14/ispfpga/vhdl_packages/numeric_std.vhd'
+INFO - C:/lscc/diamond/3.14/ispfpga/vhdl_packages/numeric_std.vhd(57,9-57,20) (VHDL-1014) analyzing package 'numeric_std'
+INFO - C:/lscc/diamond/3.14/ispfpga/vhdl_packages/numeric_std.vhd(874,14-874,25) (VHDL-1013) analyzing package body 'numeric_std'
+(VHDL-1481) Analyzing VHDL file 'C:/lscc/diamond/3.14/ispfpga/vhdl_packages/textio.vhd'
+INFO - C:/lscc/diamond/3.14/ispfpga/vhdl_packages/textio.vhd(13,9-13,15) (VHDL-1014) analyzing package 'textio'
+INFO - C:/lscc/diamond/3.14/ispfpga/vhdl_packages/textio.vhd(114,14-114,20) (VHDL-1013) analyzing package body 'textio'
+(VHDL-1481) Analyzing VHDL file 'C:/lscc/diamond/3.14/ispfpga/vhdl_packages/std_logic_textio.vhd'
+INFO - C:/lscc/diamond/3.14/ispfpga/vhdl_packages/std_logic_textio.vhd(26,9-26,25) (VHDL-1014) analyzing package 'std_logic_textio'
+INFO - C:/lscc/diamond/3.14/ispfpga/vhdl_packages/std_logic_textio.vhd(72,14-72,30) (VHDL-1013) analyzing package body 'std_logic_textio'
+(VHDL-1481) Analyzing VHDL file 'C:/lscc/diamond/3.14/ispfpga/vhdl_packages/syn_attr.vhd'
+INFO - C:/lscc/diamond/3.14/ispfpga/vhdl_packages/syn_attr.vhd(39,9-39,19) (VHDL-1014) analyzing package 'attributes'
+(VHDL-1481) Analyzing VHDL file 'C:/lscc/diamond/3.14/ispfpga/vhdl_packages/syn_misc.vhd'
+INFO - C:/lscc/diamond/3.14/ispfpga/vhdl_packages/syn_misc.vhd(30,9-30,23) (VHDL-1014) analyzing package 'std_logic_misc'
+INFO - C:/lscc/diamond/3.14/ispfpga/vhdl_packages/syn_misc.vhd(182,14-182,28) (VHDL-1013) analyzing package body 'std_logic_misc'
+(VHDL-1481) Analyzing VHDL file 'C:/lscc/diamond/3.14/ispfpga/vhdl_packages/math_real.vhd'
+INFO - C:/lscc/diamond/3.14/ispfpga/vhdl_packages/math_real.vhd(56,9-56,18) (VHDL-1014) analyzing package 'math_real'
+INFO - C:/lscc/diamond/3.14/ispfpga/vhdl_packages/math_real.vhd(685,14-685,23) (VHDL-1013) analyzing package body 'math_real'
+(VHDL-1481) Analyzing VHDL file 'C:/lscc/diamond/3.14/ispfpga/vhdl_packages/mixed_lang_vltype.vhd'
+INFO - C:/lscc/diamond/3.14/ispfpga/vhdl_packages/mixed_lang_vltype.vhd(9,9-9,17) (VHDL-1014) analyzing package 'vl_types'
+INFO - C:/lscc/diamond/3.14/ispfpga/vhdl_packages/mixed_lang_vltype.vhd(88,14-88,22) (VHDL-1013) analyzing package body 'vl_types'
+(VHDL-1481) Analyzing VHDL file 'C:/lscc/diamond/3.14/ispfpga/vhdl_packages/syn_arit.vhd'
+INFO - C:/lscc/diamond/3.14/ispfpga/vhdl_packages/syn_arit.vhd(25,9-25,24) (VHDL-1014) analyzing package 'std_logic_arith'
+INFO - C:/lscc/diamond/3.14/ispfpga/vhdl_packages/syn_arit.vhd(206,14-206,29) (VHDL-1013) analyzing package body 'std_logic_arith'
+(VHDL-1481) Analyzing VHDL file 'C:/lscc/diamond/3.14/ispfpga/vhdl_packages/syn_sign.vhd'
+INFO - C:/lscc/diamond/3.14/ispfpga/vhdl_packages/syn_sign.vhd(35,9-35,25) (VHDL-1014) analyzing package 'std_logic_signed'
+INFO - C:/lscc/diamond/3.14/ispfpga/vhdl_packages/syn_sign.vhd(96,14-96,30) (VHDL-1013) analyzing package body 'std_logic_signed'
+(VHDL-1481) Analyzing VHDL file 'C:/lscc/diamond/3.14/ispfpga/vhdl_packages/syn_unsi.vhd'
+INFO - C:/lscc/diamond/3.14/ispfpga/vhdl_packages/syn_unsi.vhd(35,9-35,27) (VHDL-1014) analyzing package 'std_logic_unsigned'
+INFO - C:/lscc/diamond/3.14/ispfpga/vhdl_packages/syn_unsi.vhd(94,14-94,32) (VHDL-1013) analyzing package body 'std_logic_unsigned'
+(VHDL-1481) Analyzing VHDL file 'C:/lscc/diamond/3.14/ispfpga/vhdl_packages/synattr.vhd'
+INFO - C:/lscc/diamond/3.14/ispfpga/vhdl_packages/synattr.vhd(50,9-50,19) (VHDL-1014) analyzing package 'attributes'
 (VERI-1482) Analyzing Verilog file 'C:/lscc/diamond/3.14/ispfpga/userware/NT/SYNTHESIS_HEADERS/ecp5u.v'
-Done: design load finished with (0) errors, and (0) warnings
+(VHDL-1481) Analyzing VHDL file 'C:/lscc/diamond/3.14/ispfpga/userware/NT/SYNTHESIS_HEADERS/ecp5u.vhd'
+(VHDL-1481) Analyzing VHDL file 'D:/RTL_FPGA/VHDL/lar_amt/lar_amt.vhd'
+INFO - D:/RTL_FPGA/VHDL/lar_amt/lar_amt.vhd(5,8-5,15) (VHDL-1012) analyzing entity 'lar_amt'
+INFO - D:/RTL_FPGA/VHDL/lar_amt/lar_amt.vhd(14,14-14,23) (VHDL-1010) analyzing architecture 'behaviour'
+ERROR - D:/RTL_FPGA/VHDL/lar_amt/lar_amt.vhd(18,50-18,51) (VHDL-1261) syntax error near ','
+ERROR - D:/RTL_FPGA/VHDL/lar_amt/lar_amt.vhd(19,2-19,51) (VHDL-1294) variable outside of subprogram or process must be 'shared'
+ERROR - D:/RTL_FPGA/VHDL/lar_amt/lar_amt.vhd(21,3-21,6) (VHDL-1261) syntax error near 'for'
+ERROR - D:/RTL_FPGA/VHDL/lar_amt/lar_amt.vhd(21,20-21,21) (VHDL-1261) syntax error near '-'
+ERROR - D:/RTL_FPGA/VHDL/lar_amt/lar_amt.vhd(22,22-22,24) (VHDL-1261) syntax error near ':='
+ERROR - D:/RTL_FPGA/VHDL/lar_amt/lar_amt.vhd(22,25-22,29) (VHDL-1241) 'a' is not declared
+ERROR - D:/RTL_FPGA/VHDL/lar_amt/lar_amt.vhd(23,9-23,13) (VHDL-1261) syntax error near 'loop'
+ERROR - D:/RTL_FPGA/VHDL/lar_amt/lar_amt.vhd(25,31-25,32) (VHDL-1261) syntax error near '-'
+ERROR - D:/RTL_FPGA/VHDL/lar_amt/lar_amt.vhd(26,14-26,16) (VHDL-1261) syntax error near ':='
+ERROR - D:/RTL_FPGA/VHDL/lar_amt/lar_amt.vhd(28,9-28,16) (VHDL-1272) type error near 'lar_out' ; expected type ' void'
+ERROR - D:/RTL_FPGA/VHDL/lar_amt/lar_amt.vhd(29,5-29,13) (VHDL-1261) syntax error near 'function'
+ERROR - D:/RTL_FPGA/VHDL/lar_amt/lar_amt.vhd(29,14-29,17) (VHDL-1241) 'lsr' is not declared
+ERROR - D:/RTL_FPGA/VHDL/lar_amt/lar_amt.vhd(31,19-31,20) (VHDL-1261) syntax error near ':'
+ERROR - D:/RTL_FPGA/VHDL/lar_amt/lar_amt.vhd(31,52-31,55) (VHDL-1223) 'amt' is already declared in this region
+ERROR - D:/RTL_FPGA/VHDL/lar_amt/lar_amt.vhd(31,64-31,65) (VHDL-1261) syntax error near ')'
+ERROR - D:/RTL_FPGA/VHDL/lar_amt/lar_amt.vhd(32,11-32,18) (VHDL-1223) 'lar_out' is already declared in this region
+ERROR - D:/RTL_FPGA/VHDL/lar_amt/lar_amt.vhd(33,2-33,7) (VHDL-1261) syntax error near 'begin'
+ERROR - D:/RTL_FPGA/VHDL/lar_amt/lar_amt.vhd(34,20-34,21) (VHDL-1261) syntax error near '-'
+ERROR - D:/RTL_FPGA/VHDL/lar_amt/lar_amt.vhd(35,14-35,16) (VHDL-1261) syntax error near ':='
+Sorry, too many errors..
+Done: design load finished with (19) errors, and (0) warnings
 
 </PRE></BODY></HTML>
