corrected half adder design

--- a/VERILOG/aula15_mux/impl1/aula15_mux_impl1_summary.html
+++ b/VERILOG/aula15_mux/impl1/aula15_mux_impl1_summary.html
@@ -62,15 +62,15 @@
 </TR>
 <TR>
 <TD align='left' BGCOLOR='#DEE8F4' COLSPAN='1'><SPAN style="COLOR: #000000">Updated:</SPAN></TD>
-<TD align='left' BGCOLOR='#FFFFFF' COLSPAN='3'><SPAN style="COLOR: #000000">2025/05/03 19:35:20</SPAN></TD>
+<TD align='left' BGCOLOR='#FFFFFF' COLSPAN='3'><SPAN style="COLOR: #000000">2025/05/04 23:08:20</SPAN></TD>
 </TR>
 <TR>
 <TD align='left' BGCOLOR='#DEE8F4' COLSPAN='1'><SPAN style="COLOR: #000000">Implementation Location:</SPAN></TD>
-<TD align='left' BGCOLOR='#FFFFFF' COLSPAN='3'><SPAN style="COLOR: #000000">D:/RTL_FPGA/VERILOG/aula15_mux/impl1</SPAN></TD>
+<TD align='left' BGCOLOR='#FFFFFF' COLSPAN='3'><SPAN style="COLOR: #000000">E:/repositories/RTL_FPGA/VERILOG/aula15_mux/impl1</SPAN></TD>
 </TR>
 <TR>
 <TD align='left' BGCOLOR='#DEE8F4' COLSPAN='1'><SPAN style="COLOR: #000000">Project File:</SPAN></TD>
-<TD align='left' BGCOLOR='#FFFFFF' COLSPAN='3'><SPAN style="COLOR: #000000">D:/RTL_FPGA/VERILOG/aula15_mux/aula15_mux.ldf</SPAN></TD>
+<TD align='left' BGCOLOR='#FFFFFF' COLSPAN='3'><SPAN style="COLOR: #000000">E:/repositories/RTL_FPGA/VERILOG/aula15_mux/aula15_mux.ldf</SPAN></TD>
 </TR>
 </small></TABLE>
 <BR>
