--- a/VHDL/aula23_sub_paralelo/impl1/hdla_gen_hierarchy.html
+++ b/VHDL/aula23_sub_paralelo/impl1/hdla_gen_hierarchy.html
@@ -44,7 +44,16 @@ INFO - C:/lscc/diamond/3.14/ispfpga/vhdl_packages/syn_unsi.vhd(94,14-94,32) (VHD
 INFO - C:/lscc/diamond/3.14/ispfpga/vhdl_packages/synattr.vhd(50,9-50,19) (VHDL-1014) analyzing package 'attributes'
 (VERI-1482) Analyzing Verilog file 'C:/lscc/diamond/3.14/ispfpga/userware/NT/SYNTHESIS_HEADERS/ecp5u.v'
 (VHDL-1481) Analyzing VHDL file 'C:/lscc/diamond/3.14/ispfpga/userware/NT/SYNTHESIS_HEADERS/ecp5u.vhd'
+(VHDL-1481) Analyzing VHDL file 'D:/RTL_FPGA/VHDL/aula23_sub_paralelo/impl1/source/param_clah.vhd'
+INFO - D:/RTL_FPGA/VHDL/aula23_sub_paralelo/impl1/source/param_clah.vhd(3,8-3,18) (VHDL-1012) analyzing entity 'param_clah'
+INFO - D:/RTL_FPGA/VHDL/aula23_sub_paralelo/impl1/source/param_clah.vhd(13,14-13,23) (VHDL-1010) analyzing architecture 'behaviour'
 (VHDL-1481) Analyzing VHDL file 'D:/RTL_FPGA/VHDL/aula23_sub_paralelo/sum_sub.vhd'
-Done: design load finished with (0) errors, and (0) warnings
+INFO - D:/RTL_FPGA/VHDL/aula23_sub_paralelo/sum_sub.vhd(5,8-5,15) (VHDL-1012) analyzing entity 'sum_sub'
+INFO - D:/RTL_FPGA/VHDL/aula23_sub_paralelo/sum_sub.vhd(14,14-14,24) (VHDL-1010) analyzing architecture 'behavioral'
+WARNING - D:/RTL_FPGA/VHDL/aula23_sub_paralelo/sum_sub.vhd(46,8-46,15) (VHDL-1443) actual for formal port 'b' is neither a static name nor a globally static expression
+INFO - D:/RTL_FPGA/VHDL/aula23_sub_paralelo/sum_sub.vhd(5,8-5,15) (VHDL-1067) elaborating 'sum_sub(behavioral)'
+INFO - D:/RTL_FPGA/VHDL/aula23_sub_paralelo/impl1/source/param_clah.vhd(3,8-3,18) (VHDL-1067) elaborating 'param_clah_uniq_0(behaviour)'
+INFO - D:/RTL_FPGA/VHDL/aula23_sub_paralelo/impl1/source/param_clah.vhd(3,8-3,18) (VHDL-1067) elaborating 'param_clah_uniq_1(behaviour)'
+Done: design load finished with (0) errors, and (1) warnings
 
 </PRE></BODY></HTML>
