--- a/Projeto_Final/inverter/inverter_tcl.html
+++ b/Projeto_Final/inverter/inverter_tcl.html
@@ -52,6 +52,17 @@ prj_project close
 
 
 
+<A name="pn250724105715"></A><B><U><big>pn250724105715</big></U></B>
+#Start recording tcl command: 7/23/2025 21:30:50
+#Project Location: D:/RTL_FPGA/Projeto_Final/inverter; Project name: inverter
+prj_project open "D:/RTL_FPGA/Projeto_Final/inverter/inverter.ldf"
+prj_run Synthesis -impl impl1 -task Lattice_Synthesis
+prj_project save
+prj_project close
+#Stop recording: 7/24/2025 10:57:15
+
+
+
 <BR>
 <BR>
 <BR>
