added new inverter

--- a/Projeto_Final/inverterv1/inverterv1_tcl.html
+++ b/Projeto_Final/inverterv1/inverterv1_tcl.html
@@ -19,6 +19,51 @@ prj_project close
 
 
 
+<A name="pn250731012613"></A><B><U><big>pn250731012613</big></U></B>
+#Start recording tcl command: 7/30/2025 19:31:09
+#Project Location: D:/RTL_FPGA/Projeto_Final/inverterv1; Project name: inverterv1
+prj_project open "D:/RTL_FPGA/Projeto_Final/inverterv1/inverterv1.ldf"
+prj_src add "D:/RTL_FPGA/Projeto_Final/inverterv1/reciprocal_q16_16.vhd"
+prj_run Synthesis -impl impl1 -task Lattice_Synthesis
+prj_run Synthesis -impl impl1 -task Lattice_Synthesis
+prj_run Synthesis -impl impl1 -task Lattice_Synthesis
+prj_run Synthesis -impl impl1 -task Lattice_Synthesis
+prj_run Synthesis -impl impl1 -task Lattice_Synthesis
+prj_run Synthesis -impl impl1 -task Lattice_Synthesis
+prj_run Synthesis -impl impl1 -task Lattice_Synthesis
+prj_run Synthesis -impl impl1 -task Lattice_Synthesis
+prj_run Synthesis -impl impl1 -task Lattice_Synthesis
+prj_run Synthesis -impl impl1 -task Lattice_Synthesis
+prj_run Synthesis -impl impl1 -task Lattice_Synthesis
+prj_run Synthesis -impl impl1 -task Lattice_Synthesis
+prj_run Synthesis -impl impl1 -task Lattice_Synthesis
+prj_run Synthesis -impl impl1 -task Lattice_Synthesis
+prj_src exclude "D:/RTL_FPGA/Projeto_Final/inverterv1/reciprocal_q16_16.v"
+prj_run Synthesis -impl impl1 -task Lattice_Synthesis
+prj_run Synthesis -impl impl1 -task Lattice_Synthesis
+prj_run Synthesis -impl impl1 -task Lattice_Synthesis
+prj_run Synthesis -impl impl1 -task Lattice_Synthesis
+prj_run Synthesis -impl impl1 -task Lattice_Synthesis
+prj_run Synthesis -impl impl1 -task Lattice_Synthesis
+prj_run Synthesis -impl impl1 -task Lattice_Synthesis
+prj_src add "D:/RTL_FPGA/Projeto_Final/inverterv1/sim_inv/sim_inv.spf"
+prj_run Synthesis -impl impl1 -task Lattice_Synthesis
+prj_src add "D:/RTL_FPGA/Projeto_Final/inverterv1/sim_inv/sim_inv.spf"
+source "D:/RTL_FPGA/Projeto_Final/inverterv1/hdle_generate_tbtemplate.tcl"
+prj_src add -simulate_only "matrix_inv_tf.v"
+prj_src add "D:/RTL_FPGA/Projeto_Final/inverterv1/sim_inv/sim_inv.spf"
+#Stop recording: 7/31/2025 01:26:13
+
+
+
+<A name="pn250802000218"></A><B><U><big>pn250802000218</big></U></B>
+#Start recording tcl command: 8/1/2025 23:04:26
+#Project Location: C:/Users/Luso/Documents/RTL_FPGA/RTL_FPGA/Projeto_Final/inverterv1; Project name: inverterv1
+prj_project open "C:/Users/Luso/Documents/RTL_FPGA/RTL_FPGA/Projeto_Final/inverterv1/inverterv1.ldf"
+#Stop recording: 8/2/2025 00:02:18
+
+
+
 <BR>
 <BR>
 <BR>
