new ideas for final project~

--- a/Projeto_Final/kalman_core/impl1/hdla_gen_hierarchy.html
+++ b/Projeto_Final/kalman_core/impl1/hdla_gen_hierarchy.html
@@ -2,25 +2,27 @@
 Starting: parse design source files
 (VERI-1482) Analyzing Verilog file 'C:/lscc/diamond/3.14/ispfpga/userware/NT/SYNTHESIS_HEADERS/ecp5u.v'
 (VERI-1482) Analyzing Verilog file 'D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v'
-ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(26,2-26,11) (VERI-1137) syntax error near 'parameter'
-ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(26,2-26,11) (VERI-2344) Verilog 2000 keyword parameter used in incorrect context
-ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(27,2-27,11) (VERI-1137) syntax error near 'parameter'
-ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(27,2-27,11) (VERI-2344) Verilog 2000 keyword parameter used in incorrect context
-ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(28,2-28,11) (VERI-1137) syntax error near 'parameter'
-ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(28,2-28,11) (VERI-2344) Verilog 2000 keyword parameter used in incorrect context
-ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(29,2-29,11) (VERI-1137) syntax error near 'parameter'
-ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(29,2-29,11) (VERI-2344) Verilog 2000 keyword parameter used in incorrect context
-ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(30,2-30,11) (VERI-1137) syntax error near 'parameter'
-ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(30,2-30,11) (VERI-2344) Verilog 2000 keyword parameter used in incorrect context
-ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(32,5-32,11) (VERI-1137) syntax error near 'always'
-ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(32,5-32,11) (VERI-2344) Verilog 2000 keyword always used in incorrect context
-ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(88,8-88,9) (VERI-1137) syntax error near ';'
-ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(91,8-91,9) (VERI-1137) syntax error near ';'
-ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(127,1-127,10) (VERI-1137) syntax error near 'endmodule'
-ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(127,1-127,10) (VERI-2344) Verilog 2000 keyword endmodule used in incorrect context
-WARNING - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(126,1-127,10) (VERI-1988) empty statement in always construct
-ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(1,1-127,10) (VERI-1072) module 'kalman_fsm' ignored due to previous errors
+ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(29,2-29,5) (VERI-1137) syntax error near 'reg'
+ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(29,2-29,5) (VERI-2344) Verilog 2000 keyword reg used in incorrect context
+ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(44,2-44,11) (VERI-1137) syntax error near 'parameter'
+ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(44,2-44,11) (VERI-2344) Verilog 2000 keyword parameter used in incorrect context
+ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(45,2-45,11) (VERI-1137) syntax error near 'parameter'
+ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(45,2-45,11) (VERI-2344) Verilog 2000 keyword parameter used in incorrect context
+ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(46,2-46,11) (VERI-1137) syntax error near 'parameter'
+ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(46,2-46,11) (VERI-2344) Verilog 2000 keyword parameter used in incorrect context
+ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(47,2-47,11) (VERI-1137) syntax error near 'parameter'
+ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(47,2-47,11) (VERI-2344) Verilog 2000 keyword parameter used in incorrect context
+ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(48,2-48,11) (VERI-1137) syntax error near 'parameter'
+ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(48,2-48,11) (VERI-2344) Verilog 2000 keyword parameter used in incorrect context
+ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(50,5-50,11) (VERI-1137) syntax error near 'always'
+ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(50,5-50,11) (VERI-2344) Verilog 2000 keyword always used in incorrect context
+ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(106,8-106,9) (VERI-1137) syntax error near ';'
+ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(109,8-109,9) (VERI-1137) syntax error near ';'
+ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(145,1-145,10) (VERI-1137) syntax error near 'endmodule'
+ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(145,1-145,10) (VERI-2344) Verilog 2000 keyword endmodule used in incorrect context
+WARNING - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(144,1-145,10) (VERI-1988) empty statement in always construct
+ERROR - D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v(1,1-145,10) (VERI-1072) module 'kalman_fsm' ignored due to previous errors
 (VERI-1483) Verilog file 'D:/RTL_FPGA/Projeto_Final/kalman_core/kalman_core.v' ignored due to errors
-Done: design load finished with (17) errors, and (1) warnings
+Done: design load finished with (19) errors, and (1) warnings
 
 </PRE></BODY></HTML>
